compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__modules__alias_fn_call.snap
---
source: compiler-core/src/javascript/tests/modules.rs
expression: "\nimport rocket_ship as boop\npub fn go() { boop.go() }\n"
---
----- SOURCE CODE

import rocket_ship as boop
pub fn go() { boop.go() }


----- COMPILED JAVASCRIPT
import * as $boop from "../rocket_ship.mjs";

export function go() {
  return $boop.go();
}
