compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__modules__constant_module_access_with_keyword.snap
---
source: compiler-core/src/javascript/tests/modules.rs
expression: "\nimport rocket_ship\npub const variable = rocket_ship.class\n"
---
----- SOURCE CODE

import rocket_ship
pub const variable = rocket_ship.class


----- COMPILED JAVASCRIPT
import * as $rocket_ship from "../rocket_ship.mjs";

export const variable = $rocket_ship.class$;
