compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__modules__imported_custom_types_do_get_rendered_in_typescript.snap
---
source: compiler-core/src/javascript/tests/modules.rs
assertion_line: 201
expression: "import one/two/three.{Custom, One, Two}\n\npub fn go() -> List(Custom) { [One, Two] }\n"
---
import * as _ from "../gleam.d.ts";
import * as three from "../one/two/three.d.ts";

export function go(): _.List<three.Custom$>;

