compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__modules__imported_custom_types_dont_get_rendered.snap
---
source: compiler-core/src/javascript/tests/modules.rs
assertion_line: 186
expression: "import one/two/three.{Custom, One, Two}\n\npub fn go() -> List(Custom) { [One, Two] }\n"
---
import { toList } from "../gleam.mjs";
import * as $three from "../one/two/three.mjs";
import { One, Two } from "../one/two/three.mjs";

export function go() {
  return toList([new One(), new Two()]);
}

