compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__modules__imported_external_types_dont_get_rendered.snap
---
source: compiler-core/src/javascript/tests/modules.rs
assertion_line: 156
expression: "import one/two/three.{External}\n\npub fn go() { 1 }\n"
---
import * as $three from "../one/two/three.mjs";

export function go() {
  return 1;
}

