compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__modules__imported_external_types_dont_get_rendered_with_value_of_same_name.snap
---
source: compiler-core/src/javascript/tests/modules.rs
assertion_line: 216
expression: "import one/two/three.{Thingy}\n\ntype Dup { Thingy }\n\npub fn go(x: Thingy) -> List(Thingy) { [x, x] }\n"
---
import { toList, CustomType } from "../gleam.mjs";
import * as $three from "../one/two/three.mjs";

class Thingy extends CustomType {}

export function go(x) {
  return toList([x, x]);
}

