compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__modules__renamed_module.snap
---
source: compiler-core/src/javascript/tests/modules.rs
expression: "\nimport x as y\npub const z = y.v\n"
---
----- SOURCE CODE
-- x.gleam
pub const v = 1

-- main.gleam

import x as y
pub const z = y.v


----- COMPILED JAVASCRIPT
import * as $y from "../x.mjs";

export const z = $y.v;
