compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__modules__same_import_multiple_times.snap
---
source: compiler-core/src/javascript/tests/modules.rs
assertion_line: 155
expression: "import one/two/three.{one}\nimport one/two/three.{two}\n\npub fn go() { one() + two() }\n"
---
import * as $three from "../one/two/three.mjs";
import { one, two } from "../one/two/three.mjs";

export function go() {
  return one() + two();
}

